# Magia

./: .gitignore  CMakeLists.txt  README.md  vcpkg-configuration.json  vcpkg.json
.github/workflows/: CI.yml
inc/: Vector2.hpp  config.hpp
inc/Brush/: ABrush.hpp  EraserBrush.hpp  PaintBrush.hpp
inc/Brush/Stamp/: Stamp.hpp
inc/Engine/: Action.hpp  DrawLayer.hpp  DrawMode.hpp  DrawingEngine.hpp  InterpolationManager.hpp  InterpolationMode.hpp
inc/Event/: ShortcutManager.hpp
inc/Export/: McfExporter.hpp  PngExporter.hpp
inc/Render/: ARenderer.hpp
inc/Render/Impl/: BuiltinRenderer.hpp  DebugRenderer.hpp
src/: main.cpp
src/Brush/: ABrush.cpp  EraserBrush.cpp  PaintBrush.cpp
src/Brush/Stamp/: Stamp.cpp
src/Engine/: DrawLayer.cpp  DrawingEngine.cpp  InterpolationManager.cpp
src/Event/: ShortcutManager.cpp
src/Export/: McfExporter.cpp  PngExporter.cpp
src/Render/Impl/: BuiltinRenderer.cpp  DebugRenderer.cpp
